fixed horizontal scroll & other changes

--- a/source_code/src/components/Homepage/Create-Post/post.css
+++ b/source_code/src/components/Homepage/Create-Post/post.css
@@ -1,3 +1,7 @@
+.error {
+	color: red;
+}
+
 .filter-div {
 	height: 5vh;
 	width: 30vw;
@@ -14,4 +18,54 @@
 
 .filter-div Col {
 	padding: 0px !important;
+}
+
+.add-request-button {
+	float: right;
+}
+
+.add-post-button {
+	float: right;
+}
+
+.icons {
+	margin-top: 3vh;
+	height: 4vh;
+	float: right;
+}
+
+.post-input {
+	width: 90% !important;
+}
+
+.post-shortcut {
+	color: white !important;
+	margin-right: 2vw;
+}
+
+.post-shortcut:hover {
+	color: #cc0000 !important;
+}
+.request-shortcut {
+	color: white !important;
+}
+
+.request-shortcut:hover {
+	color: #ffcc00 !important;
+}
+
+.create-post-avatar {
+	width: min-content;
+	margin-left: 2vw;
+	margin-bottom: 1vh;
+}
+
+.create-post-div {
+	height: 15vh;
+	width: 61vw;
+	border-radius: 5px;
+	margin-top: 5vh;
+	/* margin-left: 7vw; */
+	background-color: var(--createPost);
+	display: flex;
 }
