--- a/source_code/src/components/Homepage/Feed/feed.css
+++ b/source_code/src/components/Homepage/Feed/feed.css
@@ -1,7 +1,7 @@
 .feed-container {
 	width: 65vw;
 	border-radius: 5px;
-	margin-left: 5vw;
+	margin: auto;
 	margin-top: 3vh;
 }
 
